<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hydra</string>
    <string name="app_title_name">HYDRA</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="edt_hint_ip_address">IP Address</string>
    <string name="appbar_scrolling_view_behavior" tools:keep="@string/appbar_scrolling_view_behavior">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="edt_username_hint">Username</string>
    <string name="edt_password_hint">Password</string>
    <string name="main_title">HYDRA</string>
    <string name="edt_hint_ip_address_port">port</string>
    <string name="default_ip_address">hydrademo.ihsinformatics.com</string>
    <string name="default_port_number">443</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="user_not_found">No record of username found in local DB.</string>
    <string name="version_mismatch">Please update the app from playstore to continue.</string>
    <string name="age_invalid_year">Age can\'t exceed 119 Years</string>
    <string name="age_invalid_month">Age can\'t exceed 180 Months</string>
    <string name="age_invalid_day">Age can\'t exceed 5400 Days</string>
    <string name="provider_not_found">No provider associated with the user. Please contact Admin to create your user
        provider.
    </string>
    <string name="patient_not_select">SELECT PATIENT TO CONTINUE.</string>
    <string name="location_not_select">SELECT LOCATION TO CONTINUE.</string>
    <string name="patient_not_found">PATIENT NOT FOUND</string>
    <string name="offline_patient">This patient was created offline. Please submit offline form before you can start
        using the patient in online mode.
    </string>
    <string name="removed_patient">This form can\'t be viewed. This patient was removed from tablet.</string>
    <string name="data_connection_error">Could not connect to Server! Please check your connection settings or contact
        Admin
    </string>
    <string name="offline_forms_limit_error">There are already #no# offline forms in your tablet. Please upload them in
        online mode.
    </string>
    <string name="patient_creation_error">Error while creating patient.</string>
    <string name="patient_get_error">Error while fetching patient.</string>
    <string name="authentication_error">Authentication failed! Please enter valid username and password.</string>
    <string name="no_location_select">Please select your location to continue.</string>
    <string name="empty_field">This field can\'t be empty.</string>
    <string name="form_date_future">Date can\'t be in future.</string>
    <string name="mandatory_field">This is a mandatory field</string>
    <string name="mandatory_value_missing">Mandatory Fields value are missing.</string>
    <string name="invalid_value">Invalid value</string>
    <string name="value_out_of_range">Value out of range</string>
    <string name="invalid_scanned_id">Invalid ID: Scanned Id isn\'t Valid. Please try different Id.</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="no_program_selected">No program selected.</string>
    <string name="select_program_continue">Select Program to continue.</string>
    <string name="warning_before_program_change">Are you sure you want to change the Program? Any unsaved changes will
        be discarded.
    </string>
    <string name="warning_before_language_change">Are you sure you want to change the Language? Any unsaved changes will
        be discarded.
    </string>
    <string name="title_clear">Clear Form</string>
    <string name="warning_before_clear">Are you sure you want to clear this form? Any unsaved changes will be
        discarded.
    </string>
    <string name="warning_before_close_form">Are you sure you want to close this form? Any unsaved changes will be
        discarded.
    </string>
    <string name="title_logout">Log out</string>
    <string name="warning_before_logout">Are you sure you want to logout this form? Any unsaved changes will be
        discarded.
    </string>
    <string name="title_submit">Submit the Form</string>
    <string name="title_sync">Sync Form(s)</string>
    <string name="warning_before_sync">Are you sure you want to sync selected form(s) to openmrs?</string>
    <string name="warning_before_submit">Are you sure you want to submit this form to openmrs?</string>
    <string name="title_delete">Delete Form(s)</string>
    <string name="warning_before_email">Are you sure you want to email selected form(s) to support contact?</string>
    <string name="title_email">Email Form(s)</string>
    <string name="warning_before_delete">Are you sure you want to delete selected form(s) without submitting it to
        openmrs?
    </string>
    <string name="title_save">Save the Form</string>
    <string name="warning_before_save">Are you sure you want to submit this form locally?</string>
    <string name="title_close">Close App</string>
    <string name="warning_before_close">Are you sure you want to close the App?</string>
    <string name="error_no_selection">Select at least one form to continue.</string>
    <string name="title_error">Error!</string>
    <string name="title_alert">Alert!</string>
    <string name="form_error">Resolve all the issue(s) to continue.</string>
    <string name="enrollment_date_error">Enrollment Date can\'t be after form date.</string>
    <string name="duplicate_patient_id">Patient ID already exists.</string>
    <string name="barcode_scanner_missing">Missing Barcode Scanner. Please download and install Barcode Scanner from
        Play Store to be able to scan the QR Codes.
    </string>
    <string name="form_cannot_be_before_person_dob">Form date should be after Patient\'s DOB</string>
    <string name="patient_already_exists">Patient already exists</string>
    <string name="patient_already_exists_error_openmrs_details">has already been created. Patient Details from openmrs
        are:
    </string>
    <string name="patient_already_exists_error_tablet_datails">Patient Details on tablet:</string>
    <string name="merge_patient">Would you like to merge this patient?</string>
    <string name="invalid_password">Invalid password</string>
    <string name="ssl_enable_text">SSL enable</string>
    <string name="select">Select</string>
    <string name="loding">Loading...</string>
    <string name="hello_world">placeholder text</string>
    <string name="other">Other</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="select_string">Select an item</string>
    <string name="save">Save</string>
    <string name="enter_patient_id">Enter Patient\'s Id</string>
    <string name="enter_id">Enter Id</string>
    <string name="continue_">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export Data</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text">Enter text</string>
    <string name="submit">Submit</string>
    <string name="select_date">Select Date</string>
    <string name="login">Indus Project</string>
    <string name="sync">Sync</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="language">Language</string>
    <string name="title_activity_location_selector">Select Program Location</string>
    <string name="title_activity_main_manu">Main Menu</string>
    <string name="title_activity_patient_info_fetcher">Fetch Patient</string>
    <string name="title_activity_select_workflow">Select a Workflow</string>
    <string name="title_activity_connection_settings">Settings</string>
    <string name="title_activity_saved_forms">Saved Forms</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_activity_language_selector">Select Language</string>
    <string name="title_activity_patient_history">Patient History</string>
    <string name="unauthenticated_user">Unauthenticated user</string>
    <string name="title_sync_service">Syncing data</string>
    <string name="already_filled">Already filled</string>
    <string name="desc_sync_service">Downloading latest records</string>
    <string name="enter_initials">Enter initials</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="about">About Indus Project</string>
    <string name="age">Age:</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_to_save">Do you want to save the form?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_exit_form">Are you sure to exit Form?</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HYDRA (0.0.1)</string>
    <string name="nav_header_subtitle">admin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="notifications_title">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_by_name">Search by name...</string>
    <string name="search_by_id">Search by ID...</string>
    <string name="search_by_number">Search Patient</string>
    <string name="btn_login_search">Search</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_language">Language</string>
    <string name="menu_faq">Help/FAQ</string>
    <string name="menu_forms">Form</string>
    <string name="menu_reports">Report</string>
    <string name="menu_events">Events</string>
    <string name="search_title">Search Patient</string>
    <string name="menu_logout">Logout</string>
    <string name="action_form">Form</string>
    <string name="search">Search</string>
    <string name="change_workflow">Change Workflow</string>
    <string name="page_title">Page Title</string>
    <string name="action_text">ACTION</string>
    <string name="email_address">user01@gmail.com</string>
    <string name="event_name_text">Event name</string>
    <string name="address">123 Main Street, San Francisco, CA 94107</string>
    <string name="from">From</string>
    <string name="date_thu_september_13_2018">Thu, September 13 2018</string>
    <string name="time">Time</string>
    <string name="to">To</string>
    <string name="end_date">End date</string>
    <string name="all_day_check_box">All-day</string>
    <string name="timezone_text">Timezone</string>
    <string name="pacific_standard_time">Pacific Standard Time</string>
    <string name="search_online_title">Search Online Patient</string>
    <string name="add_test_sample">Add Test Sample</string>
    <string name="settings">URL</string>
</resources>