<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language"
                android:title="@string/menu_language"/>

        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>

        <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_faqs_filled"
                android:title="@string/menu_faq"/>

    </group>

    <item android:title="Actions">
        <menu>
            <item
                    android:id="@+id/nav_forms"
                    android:icon="@drawable/ic_form_filled"
                    android:title="@string/menu_forms"/>
            <item
                    android:id="@+id/nav_reports"
                    android:icon="@drawable/ic_report_filled"
                    android:title="@string/menu_reports"/>
            <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/ic_event_filled"
                    android:title="@string/menu_events"/>
            <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_search"
                    android:title="@string/search_title"/>
            <item
                    android:id="@+id/nav_search_online"
                    android:icon="@drawable/ic_search"
                    android:title="@string/search_online_title"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"/>

    </group>


</menu>
