<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="com.ihsinformatics.div.Login">

    <item
            android:id="@+id/menu_form"
            android:icon="@drawable/ic_form_filled"
            android:orderInCategory="1"
            app:showAsAction="always"
            android:iconTint="@color/White"
            android:title="@string/action_form"/>

    <item
            android:id="@+id/action_search"
            android:orderInCategory="1"
            android:icon="@drawable/ic_user_filled"
            android:iconTint="@color/White"
            app:showAsAction="always"

            android:title="@string/search"/>

    <item
            android:visible="false"
            android:id="@+id/action_language"
            android:orderInCategory="1"
            android:title="@string/language"/>


    <item
            android:id="@+id/action_sync"
            android:orderInCategory="3"
            app:showAsAction="always"
            android:visible="false"
            android:icon="@drawable/sync"
            android:title="@string/notifications"/>
    <item
            android:id="@+id/action_notifications"
            android:orderInCategory="4"
            android:actionLayout="@layout/action_notification"
            app:showAsAction="always"
            android:icon="@drawable/bell"
            android:title="@string/notifications"/>


</menu>
