<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="com.ihsinformatics.div.Login">
    <item
            android:id="@+id/overflow"
            android:orderInCategory="100"
            app:showAsAction="always"
            android:icon="@drawable/more_options"
            android:title="">
        <menu>

            <item
                android:id="@+id/settings"
                android:orderInCategory="1"
                app:showAsAction="never"
                android:title="@string/settings"/>

            <item
                    android:id="@+id/action_logout"
                    android:orderInCategory="3"
                    app:showAsAction="never"
                    android:title="@string/action_logout"/>

            <item
                    android:id="@+id/action_change_workflow"
                    android:orderInCategory="2"
                    app:showAsAction="never"
                    android:title="@string/change_workflow"/>


            <!--<item-->
            <!--android:id="@+id/action_notifications"-->
            <!--android:orderInCategory="4"-->
            <!--android:actionLayout="@layout/action_notification"-->
            <!--app:showAsAction="always"-->
            <!--android:icon="@drawable/bell"-->
            <!--android:title="@string/notifications"/>-->


        </menu>
    </item>
</menu>